Fixed spacing issues and added images to skills and removed local image files

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,41 +1,49 @@
 .About{
     display: flex;
     background-image: url(https://i.gifer.com/Ozp.gif);
-    background-size: 150px 1000px;
+    background-size: 100% 100%;
 }
 
 .About-profile{
     position: absolute;
-    margin-left: 48%;
-    margin-right: 50%;
+    margin-left: 43%;
+    margin-right: auto;
     margin-top: 0;
-    margin-bottom: 100px;
-    width: 100%;
+    margin-bottom: 300px;
+    width: 40%;
+    color:white;
+    font-family: "Nunito";
+}
+
+.About-info{
+    margin-top: 250px;
     display:block;
 }
 
-.About-bio{
+.About-bold{
+    font-weight: bold;
     margin-top: 50px;
-    margin-bottom: 200px;
+}
+
+.About-bio{
     color:white;
-    position: relative;
     text-align: center;
+    font-size: 22px;
+    font-family: "Nunito";
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 50%;
+}
+
+.About-skills{
+    color:white;
+    text-align: center;
     font-size: 22px;
     font-family: "Nunito";
 }
 
-.About-skills{
-    margin-top: 50px;
-    margin-bottom: 200px;
-    color:white;
-    position: relative;
-    text-align: center;
+.About-skills-image{
+    display:contents;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
-    font-size: 22px;
-    font-family: "Nunito";
 }
